--- a/.github/workflows/wiz-cli.yml
+++ b/.github/workflows/wiz-cli.yml
@@ -23,10 +23,10 @@ jobs:
       run: curl -o wizcli https://wizcli.app.wiz.io/wizcli && chmod +x wizcli
 
     - name: Authenticate to Wiz
-      run: WIZ_ENV=test ./wizcli auth --id "$WIZ_CLIENT_ID" --secret "$WIZ_CLIENT_SECRET"
+      run: ./wizcli auth --id "$WIZ_CLIENT_ID" --secret "$WIZ_CLIENT_SECRET"
       env:
         WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
         WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
     - name: Run wiz-cli IaC scan
-      run: WIZ_ENV=test ./wizcli iac scan --path $SCAN_PATH --policy "$POLICY"
+      run: ./wizcli iac scan --path $SCAN_PATH --policy "$POLICY"
